Fixed bug #39832 (SOAP Server: parameter not matching the WSDL specified type are set to 0)